--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "BiSeNet"]
-	path = BiSeNet
+[submodule "Bisenet"]
+	path = Bisenet
 	url = https://github.com/zllrunning/face-parsing.PyTorch
